// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building shared integer with duplicate integer property in core namespace should have validation failures for each entity 1`] = `"Shared Integer named EntityName is a duplicate declaration of that name."`;

exports[`when building shared integer with duplicate integer property in core namespace should have validation failures for each entity 2`] = `
Object {
  "column": 17,
  "line": 11,
  "tokenText": "EntityName",
}
`;

exports[`when building shared integer with duplicate integer property in core namespace should have validation failures for each entity 3`] = `"Integer Property named EntityName is a duplicate declaration of that name."`;

exports[`when building shared integer with duplicate integer property in core namespace should have validation failures for each entity 4`] = `
Object {
  "column": 12,
  "line": 5,
  "tokenText": "EntityName",
}
`;

exports[`when building shared string with duplicate integer property in core namespace should have validation failures for each entity 1`] = `"Shared String named EntityName is a duplicate declaration of that name."`;

exports[`when building shared string with duplicate integer property in core namespace should have validation failures for each entity 2`] = `
Object {
  "column": 16,
  "line": 2,
  "tokenText": "EntityName",
}
`;

exports[`when building shared string with duplicate integer property in core namespace should have validation failures for each entity 3`] = `"Integer Property named EntityName is a duplicate declaration of that name."`;

exports[`when building shared string with duplicate integer property in core namespace should have validation failures for each entity 4`] = `
Object {
  "column": 12,
  "line": 10,
  "tokenText": "EntityName",
}
`;
